css: fix centering on mobile

--- a/style.css
+++ b/style.css
@@ -35,15 +35,18 @@ h6 {
 }
 
 .rank {
-  position: relative;
   margin: 0 auto;
-  padding-left: -1rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  justify-content: center;
 }
 
 .rank .throbber {
   position: absolute;
   top: -0.5rem;
-  left: 0.5rem;
+  left: -0.5rem;
   width: 2rem;
   height: 2rem;
   border-radius: 2rem;
@@ -53,6 +56,7 @@ h6 {
 }
 
 .rank .number {
+  position: relative;
   font-size: 10rem;
   line-height: 8rem;
   margin-left: 1rem;
